# lucid-financials-app

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml
app/config/: database.py  settings.py
app/controllers/: auth_controller.py  post_controller.py
app/middleware/: payload_size.py
app/models/: post.py  user.py
app/repositories/: post_repository.py  user_repository.py
app/schemas/: post.py  user.py
app/services/: auth_service.py  post_service.py
app/tests/: test_post_service.py  test_schemas.py  test_user_service.py  test_utils.py
app/utils/: auth.py  hashing.py  jwt.py
migrations/: env.py
migrations/versions/: 8f54d3318dfb_initial.py  d882afa75189_create_post_table.py
